// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`basic 1`] = `
{
  "importStrings": [
    "import locale_srcDir_srcDir_en_json from "srcDir/en.json";",
    "import locale_srcDir_srcDir_ja_json from "srcDir/ja.json";",
    "import locale_srcDir_srcDir_fr_json from "srcDir/fr.json";",
  ],
  "localeLoaders": [
    [
      "en",
      [
        {
          "cache": "true",
          "key": ""srcDir/en.json"",
          "load": "() => Promise.resolve(locale_srcDir_srcDir_en_json)",
        },
      ],
    ],
    [
      "ja",
      [
        {
          "cache": "true",
          "key": ""srcDir/ja.json"",
          "load": "() => Promise.resolve(locale_srcDir_srcDir_ja_json)",
        },
      ],
    ],
    [
      "fr",
      [
        {
          "cache": "true",
          "key": ""srcDir/fr.json"",
          "load": "() => Promise.resolve(locale_srcDir_srcDir_fr_json)",
        },
      ],
    ],
  ],
  "normalizedLocales": [
    {
      "code": "en",
      "files": [
        {
          "cache": true,
          "path": "en.json",
        },
      ],
    },
    {
      "code": "ja",
      "files": [
        {
          "cache": true,
          "path": "ja.json",
        },
      ],
    },
    {
      "code": "fr",
      "files": [
        {
          "cache": true,
          "path": "fr.json",
        },
      ],
    },
  ],
  "nuxtI18nOptions": {
    "defaultLocale": "en",
    "lazy": false,
    "locales": [],
  },
  "vueI18nConfigs": [
    "() => import("/test/i18n.config.ts?hash=6354e9fa&config=1" /* webpackChunkName: "i18n_config_ts_6354e9fa" */)",
  ],
}
`;

exports[`files with cache configuration (relative) 1`] = `
{
  "importStrings": [],
  "localeLoaders": [
    [
      "en",
      [
        {
          "cache": "true",
          "key": ""srcDir/test/locales/en.json"",
          "load": "() => import("srcDir/test/locales/en.json" /* webpackChunkName: "locale_srcDir_srcDir_test_locales_en_json" */)",
        },
      ],
    ],
    [
      "ja",
      [
        {
          "cache": "true",
          "key": ""srcDir/test/locales/ja.json"",
          "load": "() => import("srcDir/test/locales/ja.json" /* webpackChunkName: "locale_srcDir_srcDir_test_locales_ja_json" */)",
        },
      ],
    ],
    [
      "fr",
      [
        {
          "cache": "true",
          "key": ""srcDir/test/locales/fr.json"",
          "load": "() => import("srcDir/test/locales/fr.json" /* webpackChunkName: "locale_srcDir_srcDir_test_locales_fr_json" */)",
        },
      ],
    ],
    [
      "es",
      [
        {
          "cache": "false",
          "key": ""srcDir/test/locales/es.json"",
          "load": "() => import("srcDir/test/locales/es.json" /* webpackChunkName: "locale_srcDir_srcDir_test_locales_es_json" */)",
        },
      ],
    ],
    [
      "es-AR",
      [
        {
          "cache": "false",
          "key": ""srcDir/test/locales/es.json"",
          "load": "() => import("srcDir/test/locales/es.json" /* webpackChunkName: "locale_srcDir_srcDir_test_locales_es_json" */)",
        },
        {
          "cache": "true",
          "key": ""srcDir/test/locales/es-AR.json"",
          "load": "() => import("srcDir/test/locales/es-AR.json" /* webpackChunkName: "locale_srcDir_srcDir_test_locales_es_AR_json" */)",
        },
      ],
    ],
  ],
  "normalizedLocales": [
    {
      "code": "en",
      "files": [
        {
          "cache": true,
          "path": "locales/en.json",
        },
      ],
    },
    {
      "code": "ja",
      "files": [
        {
          "cache": true,
          "path": "locales/ja.json",
        },
      ],
    },
    {
      "code": "fr",
      "files": [
        {
          "cache": true,
          "path": "locales/fr.json",
        },
      ],
    },
    {
      "code": "es",
      "files": [
        {
          "cache": false,
          "path": "locales/es.json",
        },
      ],
    },
    {
      "code": "es-AR",
      "files": [
        {
          "cache": false,
          "path": "locales/es.json",
        },
        {
          "cache": true,
          "path": "locales/es-AR.json",
        },
      ],
    },
  ],
  "nuxtI18nOptions": {
    "defaultLocale": "en",
    "experimental": {
      "generatedLocaleFilePathFormat": "relative",
    },
    "lazy": true,
    "locales": [],
  },
  "vueI18nConfigs": [
    "() => import("/test/i18n.config.ts?hash=6354e9fa&config=1" /* webpackChunkName: "i18n_config_ts_6354e9fa" */)",
  ],
}
`;

exports[`files with cache configuration 1`] = `
{
  "importStrings": [],
  "localeLoaders": [
    [
      "en",
      [
        {
          "cache": "true",
          "key": ""srcDir/test/locales/en.json"",
          "load": "() => import("srcDir/test/locales/en.json" /* webpackChunkName: "locale_srcDir_srcDir_test_locales_en_json" */)",
        },
      ],
    ],
    [
      "ja",
      [
        {
          "cache": "true",
          "key": ""srcDir/test/locales/ja.json"",
          "load": "() => import("srcDir/test/locales/ja.json" /* webpackChunkName: "locale_srcDir_srcDir_test_locales_ja_json" */)",
        },
      ],
    ],
    [
      "fr",
      [
        {
          "cache": "true",
          "key": ""srcDir/test/locales/fr.json"",
          "load": "() => import("srcDir/test/locales/fr.json" /* webpackChunkName: "locale_srcDir_srcDir_test_locales_fr_json" */)",
        },
      ],
    ],
    [
      "es",
      [
        {
          "cache": "false",
          "key": ""srcDir/test/locales/es.json"",
          "load": "() => import("srcDir/test/locales/es.json" /* webpackChunkName: "locale_srcDir_srcDir_test_locales_es_json" */)",
        },
      ],
    ],
    [
      "es-AR",
      [
        {
          "cache": "false",
          "key": ""srcDir/test/locales/es.json"",
          "load": "() => import("srcDir/test/locales/es.json" /* webpackChunkName: "locale_srcDir_srcDir_test_locales_es_json" */)",
        },
        {
          "cache": "true",
          "key": ""srcDir/test/locales/es-AR.json"",
          "load": "() => import("srcDir/test/locales/es-AR.json" /* webpackChunkName: "locale_srcDir_srcDir_test_locales_es_AR_json" */)",
        },
      ],
    ],
  ],
  "normalizedLocales": [
    {
      "code": "en",
      "files": [
        {
          "cache": true,
          "path": "/test/locales/en.json",
        },
      ],
    },
    {
      "code": "ja",
      "files": [
        {
          "cache": true,
          "path": "/test/locales/ja.json",
        },
      ],
    },
    {
      "code": "fr",
      "files": [
        {
          "cache": true,
          "path": "/test/locales/fr.json",
        },
      ],
    },
    {
      "code": "es",
      "files": [
        {
          "cache": false,
          "path": "/test/locales/es.json",
        },
      ],
    },
    {
      "code": "es-AR",
      "files": [
        {
          "cache": false,
          "path": "/test/locales/es.json",
        },
        {
          "cache": true,
          "path": "/test/locales/es-AR.json",
        },
      ],
    },
  ],
  "nuxtI18nOptions": {
    "defaultLocale": "en",
    "lazy": true,
    "locales": [],
  },
  "vueI18nConfigs": [
    "() => import("/test/i18n.config.ts?hash=6354e9fa&config=1" /* webpackChunkName: "i18n_config_ts_6354e9fa" */)",
  ],
}
`;

exports[`lazy 1`] = `
{
  "importStrings": [],
  "localeLoaders": [
    [
      "en",
      [
        {
          "cache": "true",
          "key": ""srcDir/en.json"",
          "load": "() => import("srcDir/en.json" /* webpackChunkName: "locale_srcDir_srcDir_en_json" */)",
        },
      ],
    ],
    [
      "ja",
      [
        {
          "cache": "true",
          "key": ""srcDir/ja.json"",
          "load": "() => import("srcDir/ja.json" /* webpackChunkName: "locale_srcDir_srcDir_ja_json" */)",
        },
      ],
    ],
    [
      "fr",
      [
        {
          "cache": "true",
          "key": ""srcDir/fr.json"",
          "load": "() => import("srcDir/fr.json" /* webpackChunkName: "locale_srcDir_srcDir_fr_json" */)",
        },
      ],
    ],
  ],
  "normalizedLocales": [
    {
      "code": "en",
      "files": [
        {
          "cache": true,
          "path": "en.json",
        },
      ],
    },
    {
      "code": "ja",
      "files": [
        {
          "cache": true,
          "path": "ja.json",
        },
      ],
    },
    {
      "code": "fr",
      "files": [
        {
          "cache": true,
          "path": "fr.json",
        },
      ],
    },
  ],
  "nuxtI18nOptions": {
    "defaultLocale": "en",
    "lazy": true,
    "locales": [],
  },
  "vueI18nConfigs": [
    "() => import("/test/i18n.config.ts?hash=6354e9fa&config=1" /* webpackChunkName: "i18n_config_ts_6354e9fa" */)",
  ],
}
`;

exports[`locale file in nested 1`] = `
{
  "importStrings": [],
  "localeLoaders": [
    [
      "en",
      [
        {
          "cache": "true",
          "key": ""srcDir/en/main.json"",
          "load": "() => import("srcDir/en/main.json" /* webpackChunkName: "locale_srcDir_srcDir_en_main_json" */)",
        },
      ],
    ],
    [
      "ja",
      [
        {
          "cache": "true",
          "key": ""srcDir/ja/main.json"",
          "load": "() => import("srcDir/ja/main.json" /* webpackChunkName: "locale_srcDir_srcDir_ja_main_json" */)",
        },
      ],
    ],
    [
      "fr",
      [
        {
          "cache": "true",
          "key": ""srcDir/fr/main.json"",
          "load": "() => import("srcDir/fr/main.json" /* webpackChunkName: "locale_srcDir_srcDir_fr_main_json" */)",
        },
      ],
    ],
  ],
  "normalizedLocales": [
    {
      "code": "en",
      "files": [
        {
          "cache": true,
          "path": "en/main.json",
        },
      ],
    },
    {
      "code": "ja",
      "files": [
        {
          "cache": true,
          "path": "ja/main.json",
        },
      ],
    },
    {
      "code": "fr",
      "files": [
        {
          "cache": true,
          "path": "fr/main.json",
        },
      ],
    },
  ],
  "nuxtI18nOptions": {
    "defaultLocale": "en",
    "lazy": true,
    "locales": [],
  },
  "vueI18nConfigs": [
    "() => import("/test/i18n.config.ts?hash=6354e9fa&config=1" /* webpackChunkName: "i18n_config_ts_6354e9fa" */)",
  ],
}
`;

exports[`multiple files 1`] = `
{
  "importStrings": [],
  "localeLoaders": [
    [
      "en",
      [
        {
          "cache": "true",
          "key": ""srcDir/en.json"",
          "load": "() => import("srcDir/en.json" /* webpackChunkName: "locale_srcDir_srcDir_en_json" */)",
        },
      ],
    ],
    [
      "ja",
      [
        {
          "cache": "true",
          "key": ""srcDir/ja.json"",
          "load": "() => import("srcDir/ja.json" /* webpackChunkName: "locale_srcDir_srcDir_ja_json" */)",
        },
      ],
    ],
    [
      "fr",
      [
        {
          "cache": "true",
          "key": ""srcDir/fr.json"",
          "load": "() => import("srcDir/fr.json" /* webpackChunkName: "locale_srcDir_srcDir_fr_json" */)",
        },
      ],
    ],
    [
      "es",
      [
        {
          "cache": "true",
          "key": ""srcDir/es.json"",
          "load": "() => import("srcDir/es.json" /* webpackChunkName: "locale_srcDir_srcDir_es_json" */)",
        },
      ],
    ],
    [
      "es-AR",
      [
        {
          "cache": "true",
          "key": ""srcDir/es.json"",
          "load": "() => import("srcDir/es.json" /* webpackChunkName: "locale_srcDir_srcDir_es_json" */)",
        },
        {
          "cache": "true",
          "key": ""srcDir/es-AR.json"",
          "load": "() => import("srcDir/es-AR.json" /* webpackChunkName: "locale_srcDir_srcDir_es_AR_json" */)",
        },
      ],
    ],
  ],
  "normalizedLocales": [
    {
      "code": "en",
      "files": [
        {
          "cache": true,
          "path": "en.json",
        },
      ],
    },
    {
      "code": "ja",
      "files": [
        {
          "cache": true,
          "path": "ja.json",
        },
      ],
    },
    {
      "code": "fr",
      "files": [
        {
          "cache": true,
          "path": "fr.json",
        },
      ],
    },
    {
      "code": "es",
      "files": [
        {
          "cache": true,
          "path": "es.json",
        },
      ],
    },
    {
      "code": "es-AR",
      "files": [
        {
          "cache": true,
          "path": "es.json",
        },
        {
          "cache": true,
          "path": "es-AR.json",
        },
      ],
    },
  ],
  "nuxtI18nOptions": {
    "defaultLocale": "en",
    "lazy": true,
    "locales": [],
  },
  "vueI18nConfigs": [
    "() => import("/test/i18n.config.ts?hash=6354e9fa&config=1" /* webpackChunkName: "i18n_config_ts_6354e9fa" */)",
  ],
}
`;

exports[`toCode: function (arrow) 1`] = `
{
  "importStrings": [],
  "localeLoaders": [],
  "normalizedLocales": [],
  "nuxtI18nOptions": {
    "defaultLocale": "en",
    "lazy": false,
    "locales": [
      {
        "code": "en",
        "files": [
          "en.json",
        ],
        "testFunc": [Function],
      },
      {
        "code": "ja",
        "files": [
          "ja.json",
        ],
        "testFunc": [Function],
      },
      {
        "code": "fr",
        "files": [
          "fr.json",
        ],
        "testFunc": [Function],
      },
    ],
  },
  "vueI18nConfigs": [
    "() => import("/test/i18n.config.ts?hash=6354e9fa&config=1" /* webpackChunkName: "i18n_config_ts_6354e9fa" */)",
  ],
}
`;

exports[`toCode: function (named) 1`] = `
{
  "importStrings": [],
  "localeLoaders": [],
  "normalizedLocales": [],
  "nuxtI18nOptions": {
    "defaultLocale": "en",
    "lazy": false,
    "locales": [
      {
        "code": "en",
        "files": [
          "en.json",
        ],
        "testFunc": [Function],
      },
      {
        "code": "ja",
        "files": [
          "ja.json",
        ],
        "testFunc": [Function],
      },
      {
        "code": "fr",
        "files": [
          "fr.json",
        ],
        "testFunc": [Function],
      },
    ],
  },
  "vueI18nConfigs": [
    "() => import("/test/i18n.config.ts?hash=6354e9fa&config=1" /* webpackChunkName: "i18n_config_ts_6354e9fa" */)",
  ],
}
`;

exports[`vueI18n option 1`] = `
{
  "importStrings": [
    "import locale_srcDir_srcDir_en_json from "srcDir/en.json";",
    "import locale_srcDir_srcDir_ja_json from "srcDir/ja.json";",
    "import locale_srcDir_srcDir_fr_json from "srcDir/fr.json";",
  ],
  "localeLoaders": [
    [
      "en",
      [
        {
          "cache": "true",
          "key": ""srcDir/en.json"",
          "load": "() => Promise.resolve(locale_srcDir_srcDir_en_json)",
        },
      ],
    ],
    [
      "ja",
      [
        {
          "cache": "true",
          "key": ""srcDir/ja.json"",
          "load": "() => Promise.resolve(locale_srcDir_srcDir_ja_json)",
        },
      ],
    ],
    [
      "fr",
      [
        {
          "cache": "true",
          "key": ""srcDir/fr.json"",
          "load": "() => Promise.resolve(locale_srcDir_srcDir_fr_json)",
        },
      ],
    ],
  ],
  "normalizedLocales": [
    {
      "code": "en",
      "files": [
        {
          "cache": true,
          "path": "en.json",
        },
      ],
    },
    {
      "code": "ja",
      "files": [
        {
          "cache": true,
          "path": "ja.json",
        },
      ],
    },
    {
      "code": "fr",
      "files": [
        {
          "cache": true,
          "path": "fr.json",
        },
      ],
    },
  ],
  "nuxtI18nOptions": {
    "lazy": false,
    "locales": [],
    "vueI18n": "vue-i18n.config.ts",
  },
  "vueI18nConfigs": [
    "() => import("/path/foo/layer2/vue-i18n.options.js?hash=84df1640&config=1" /* webpackChunkName: "vue_i18n_options_js_84df1640" */)",
    "() => import("/path/layer1/i18n.custom.ts?hash=faa288dc&config=1" /* webpackChunkName: "i18n_custom_ts_faa288dc" */)",
    "() => import("/path/to/i18n.config.ts?hash=42902d1e&config=1" /* webpackChunkName: "i18n_config_ts_42902d1e" */)",
  ],
}
`;
